Ajout de la configuration Render pour React

--- a/render.yaml
+++ b/render.yaml
@@ -1,10 +1,8 @@
-type: web
-name: nanshe-frontend
-env: static
-buildCommand: npm run build
-startCommand: npm run start
-staticPublishPath: build
-redirects:
-  - source: /*
-    destination: /index.html
-    status: 200
+staticSite:
+  name: nsh-frontend
+  buildCommand: npm run build
+  publishPath: build
+  redirects:
+    - source: /*
+      destination: /index.html
+      status: 200
