--- a/render.yaml
+++ b/render.yaml
@@ -3,6 +3,9 @@ staticSite:
   buildCommand: npm run build
   publishPath: build
   redirects:
+    - source: /admin/login
+      destination: /admin/login
+      status: 200
     - source: /*
       destination: /index.html
       status: 200
