--- a/package.json
+++ b/package.json
@@ -16,13 +16,14 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.7",
     "framer-motion": "^11.11.10",
-    "i18next": "^23.16.4",
+    "i18next": "^23.16.8",
+    "i18next-browser-languagedetector": "^8.0.0",
     "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-big-calendar": "^1.15.0",
     "react-dom": "^18.3.1",
-    "react-i18next": "^15.1.0",
+    "react-i18next": "^15.1.1",
     "react-icons": "^5.3.0",
     "react-markdown": "^9.0.1",
     "react-material-ui-carousel": "^3.4.2",
