--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:8000",
+  "proxy": "https://nsh.onrender.com/api/",
   "eslintConfig": {
     "extends": [
       "react-app",
