--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-big-calendar": "^1.15.0",
     "react-dom": "^18.3.1",
     "react-draggable": "^4.4.6",
+    "react-helmet": "^6.1.0",
     "react-i18next": "^15.1.1",
     "react-icons": "^5.3.0",
     "react-markdown": "^9.0.1",
