--- a/package.json
+++ b/package.json
@@ -35,8 +35,10 @@
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
     "react-table": "^7.8.0",
+    "react-tsparticles": "^2.12.0",
     "stripe": "^17.4.0",
     "three": "^0.170.0",
+    "tsparticles": "^2.12.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
